--- a/jenkins-sample/pom.xml
+++ b/jenkins-sample/pom.xml
@@ -34,12 +34,27 @@
       <username>pradeepchennam01</username>
       <password>Pr@deep1</password>
       <environment>sandbox</environment>
+      <applicationName>jenkins-sample</applicationName>
       <properties>
         <key>value</key>
       </properties>
     </armDeployment>
   </configuration>
 </plugin>
+<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.9.5</version>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+				<version>2.8.2</version>
+				<configuration>
+					<skip>${skip.artifactory}</skip>
+				</configuration>
+			</plugin>
 			
 		</plugins>
 	</build>
